add precisions on type:ClusterIP signification

--- a/session1/bloc1/4-service/simple.service.yaml
+++ b/session1/bloc1/4-service/simple.service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: ngnix-cluster-ip
 spec:
-  type: ClusterIP
+  type: ClusterIP # <- Within the cluster network overlay
   selector:
     app: nginx-app
   ports:
